gcc-defaults (1.172) UNRELEASED; urgency=medium

  * Build gccbrig on x86 linux architectures only.

 -- Matthias Klose <doko@debian.org>  Sat, 05 Aug 2017 06:29:25 -0400

gcc-defaults (1.171) unstable; urgency=medium

  * Provide liblto_plugin.so symlink in /usr/lib/bfd-plugins. Closes: #865690.
  * dh_nativejava: Don't use deprecated POSIX::tmpnam(). Closes: #866315.
  * Fix README.Bugs symlinks for cross compilers. Closes: #858112.
  * Bump GCC 6 version to 6.4.0.

 -- Matthias Klose <doko@debian.org>  Thu, 03 Aug 2017 21:23:51 -0400

gcc-defaults (1.170) experimental; urgency=medium

  * Bump GCC 6 version to 6.3.0.
  * Bump GCC 7 version to 7.1.0.
  * Build gccbrig and gcc-offload-nvptx packages.

 -- Matthias Klose <doko@debian.org>  Tue, 21 Mar 2017 11:39:31 +0100

gcc-defaults (1.169) experimental; urgency=medium

  * gcc-multilib: Add conflicts with GCC 7 cross compiler packages.
  * Stop building powerpc cross packages from this source.
  * Build mips64el packages from this source.

 -- Matthias Klose <doko@debian.org>  Sun, 27 Nov 2016 16:37:59 +0100

gcc-defaults (1.168d1) unstable; urgency=medium

  * Provide liblto_plugin.so symlink in /usr/lib/bfd-plugins. Closes: #865690.
  * dh_nativejava: Don't use deprecated POSIX::tmpnam(). Closes: #866315.
  * Fix README.Bugs symlinks for cross compilers. Closes: #858112.

 -- Matthias Klose <doko@debian.org>  Mon, 03 Jul 2017 17:21:10 +0200

gcc-defaults (1.168) experimental; urgency=medium

  * Default to GCC 7, except for gij/gcj.

 -- Matthias Klose <doko@debian.org>  Sat, 26 Nov 2016 17:14:56 +0100

gcc-defaults (1.164) unstable; urgency=medium

  * Bump GCC 6 version to 6.2.1.
  * Bump GCC 5 version to 5.4.1.
  * Rename libphobos-dev to libgphobos-dev.
  * Mark libgphobos-dev as Multi-Arch: same.

 -- Matthias Klose <doko@debian.org>  Fri, 18 Nov 2016 14:33:45 +0100

gcc-defaults (1.166) unstable; urgency=medium

  * gcc: Install gcov-dump symlinks.
